--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
   <link rel="stylesheet" type="text/css" href="/assets/styles.css" />
-  <link rel="stylesheet" type="text/css" href="/assets/indigo-pink.css" />
+  <!--<link rel="stylesheet" type="text/css" href="/assets/indigo-pink.css" />-->
+  <link rel="stylesheet" type="text/css" href="/assets/deka-material.css" />
 
   <link media="all" type="text/css" rel="stylesheet" href="/assets/foundation-flex.min.css">
 
