--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
   <link media="all" type="text/css" rel="stylesheet" href="/assets/foundation-flex.min.css">
 
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=roboto" rel="stylesheet">
   <!--<link rel="stylesheet" type="text/css" href="/font-awesome-4.7.0/css/font-awesome.min.css">-->
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
