--- a/src/emailHandler.html
+++ b/src/emailHandler.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" http-equiv="Cache-Control" content="no-store">
   <title>Parkplatztool</title>
 
 
