Layout, Farben, favicon

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="/favicon.ico">
 
   <link rel="stylesheet" type="text/css" href="/assets/styles.css" />
-  <link rel="stylesheet" type="text/css" href="/assets/indigo-pink.css" />
+  <!--<link rel="stylesheet" type="text/css" href="/assets/indigo-pink.css" />-->
 
   <link media="all" type="text/css" rel="stylesheet" href="/assets/foundation-flex.min.css">
 
