Emailversand in der Index.js funktioniert nun etwas anders, minimalDB.json enthält daten, wie sie zum einrichten eines komplett neuen Projekts nötig sind.

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,13 @@
   <link media="all" type="text/css" rel="stylesheet" href="/assets/foundation-flex.min.css">
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!--script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
+  <script src="node_modules/es5-shim/es5-shim.js"></script>
+  <script src="node_modules/es6-shim/es6-shim.js"></script-->
+
+
+
 </head>
 <body>
   <app-root></app-root>
